Issue #2938686 by Adam_Moulsdale, andrewmacpherson: Pink button/link style in Umami fails WCAG 2.0 SC 1.4.3 Contrast (minimum)
(cherry picked from commit aa3dcb5b93c8019f42bee794b5971f4aad7f2437)

--- a/core/profiles/demo_umami/themes/umami/css/components/blocks/banner/banner.css
+++ b/core/profiles/demo_umami/themes/umami/css/components/blocks/banner/banner.css
@@ -27,7 +27,7 @@
   padding: 0.5em 1.5em 0.4em;
   border: 0;
   border-radius: 4px;
-  background-color: #e84265;
+  background-color: #d93760;
   color: #fff;
   cursor: pointer;
   text-align: center;
